--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="boxed-layout">
+<!-- .boxed-layout -->
+<body class=""> 
   <app-root></app-root>
 </body>
 </html>
